--- a/IoT.WCD.BlockChain.Test.Application/IoT.WCD.BlockChain.Test.Application.csproj
+++ b/IoT.WCD.BlockChain.Test.Application/IoT.WCD.BlockChain.Test.Application.csproj
@@ -94,6 +94,10 @@
       <Project>{6A701192-C82C-440D-B1E4-BB7EC60427D8}</Project>
       <Name>IoT.WCD.BlockChain.Messaging</Name>
     </ProjectReference>
+    <ProjectReference Include="..\IoT.WCD.BlockChain.ValueObjects\IoT.WCD.BlockChain.ValueObjects.csproj">
+      <Project>{BEC264AA-4586-4C6A-9C00-BD2CBDECD99D}</Project>
+      <Name>IoT.WCD.BlockChain.ValueObjects</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
