--- a/IoT.WCD.BlockChain.Domain/IoT.WCD.BlockChain.Domain.csproj
+++ b/IoT.WCD.BlockChain.Domain/IoT.WCD.BlockChain.Domain.csproj
@@ -87,10 +87,10 @@
     <Compile Include="DomainEvents\IEventBus.cs" />
     <Compile Include="DomainEvents\EventHandlers\IEventHandler.cs" />
     <Compile Include="DomainEvents\EventHandlers\IEventHandlerFactory.cs" />
-    <Compile Include="Entities\Impl\Block.cs" />
-    <Compile Include="Entities\Impl\BlockChain.cs" />
-    <Compile Include="Entities\Interfaces\IBlock.cs" />
-    <Compile Include="Entities\Interfaces\IBlockChain.cs" />
+    <Compile Include="Entities\Impl\AuthDataBlock.cs" />
+    <Compile Include="Entities\Impl\AuthDataBlockChain.cs" />
+    <Compile Include="Entities\Interfaces\IAuthDataBlock.cs" />
+    <Compile Include="Entities\Interfaces\IAuthDataBlockChain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\AuthDataDatabase.cs" />
     <Compile Include="Queries\ECGDataDatabase.cs" />
